2010-02-03  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_module.h (ol_lrc_fetch_begin_search::callback): CHANGE: The interface of searching lyrics is changed

2010-02-02  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_gui.c: CHANGE: Use GtkBuilder instead of Glade

2010-01-30  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch.c: ADD: Serialize/deserialize for OlLrcCandidate
	ADD: Getter/setter for fileds of OlLrcCandidate

2010-01-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/tests/ol_music_info_test.c: ADD: Unit test for music info.

	* src/ol_music_info.c: ADD: Serialize/deserialize for music info.
	ADD: Setters/getters for fields of music info

2010-01-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_fork.c: ADD: Multi-process utility

2010-01-23  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_path_pattern.c: Change the file name of the path pattern module from ``Path Manager'' to ``Path Pattern''

2010-01-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_amarok2.c (ol_player_amarok2_get_controller): FIX: Issue 49, infinite recursion when getting status of amarok

2010-01-21  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: ADD: Outline width property for OSD Window

2010-01-19  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_debug.h (ol_logf): CHANGE: Issue 44, a workaround to print debug messages to stdout to avoid output to .xsession-errors

	* src/ol_player_mpd.c (ol_player_mpd_init): FIX: Issue 42, connect to MPD successfully but report failed. Thanks to sightok.net

2010-01-18  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_xmms2.c: FIX: Backward compatibility of old XMMS2 versions without xmmsv_t
	FIX: Compatible with new xmms_playback_seek_ms with whence parameter

2010-01-09  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: New Release

	* src/ol_utils_cmdline.c: ADD: Command line utilities

	* src/ol_player_moc.c: ADD: MOC support
