@@ -105,6 +105,8 @@ ol_lrc_fetch_ui_test_SOURCES = ol_lrc_fetch_ui_test.c \
 	$(top_srcdir)/src/ol_music_info.c \
 	$(top_srcdir)/src/ol_utils.c \
 	$(top_srcdir)/src/ol_lrc_fetch_ui.c \
+	$(top_srcdir)/src/ol_config.c \
+	$(top_srcdir)/src/ol_marshal.c \
 	$(top_srcdir)/src/ol_gui.c
 ol_lrc_fetch_ui_test_LDADD = \
 	@CURL_LIBS@ \
@@ -120,6 +122,8 @@ ol_lrc_fetch_module_test_SOURCES = ol_lrc_fetch_module_test.c \
 	$(top_srcdir)/src/ol_lrc_fetch_ui.c \
 	$(top_srcdir)/src/ol_music_info.c \
 	$(top_srcdir)/src/ol_fork.c \
+	$(top_srcdir)/src/ol_config.c \
+	$(top_srcdir)/src/ol_marshal.c \
 	$(top_srcdir)/src/ol_gui.c 
 
 ol_lrc_fetch_module_test_LDADD = \
